在web.xml里添加了listener，以开启Bean的request，session作用域     加了2个Test类用来做实验

--- a/src/main/webapp/dxt1.0/login.html
+++ b/src/main/webapp/dxt1.0/login.html
@@ -18,12 +18,12 @@
                 <form class="form-horizontal" action="logIn">
                     <div class="form-group">
                         <label>用户名</label>
-                        <input type="text" class="form-control" name="userName" placeholder="请输入你的用户名">
+                        <input type="text" class="form-control" age="userName" placeholder="请输入你的用户名">
                         <i class="fa fa-user"></i>
                     </div>
                     <div class="form-group help">
                         <label>密码</label>
-                        <input type="password" class="form-control" name="passWord" placeholder="请输入你的密码">
+                        <input type="password" class="form-control" age="passWord" placeholder="请输入你的密码">
                     </div>
                     <div class="form-group">
                         <input type="button" class="btn btn-default btn-sm" value="登录" onclick="javascript:window.location.href='teacher-selfcenter-main.html'">
