--- a/src/main/webapp/dxt1.0/score-for-teams-of-oneproject.html
+++ b/src/main/webapp/dxt1.0/score-for-teams-of-oneproject.html
@@ -41,13 +41,13 @@
     <div class="col-md-2 ">
     <div class="btn-group" data-toggle="buttons">
        <label for="" class="btn bg-primary active">
-            <input type="radio" name="level" autocomplete="off" checked>A
+            <input type="radio" age="level" autocomplete="off" checked>A
         </label>
         <label for="" class="btn bg-primary ">
-            <input type="radio" name="level" autocomplete="off" checked>B
+            <input type="radio" age="level" autocomplete="off" checked>B
         </label>
         <label for="" class="btn bg-primary ">
-            <input type="radio" name="level" autocomplete="off" checked>C
+            <input type="radio" age="level" autocomplete="off" checked>C
         </label>
     </div>
     </div>
@@ -60,13 +60,13 @@
         <div class="col-md-2 ">
             <div class="btn-group" data-toggle="buttons">
                 <label for="" class="btn bg-primary active">
-                    <input type="radio" name="level" autocomplete="off" checked>A
+                    <input type="radio" age="level" autocomplete="off" checked>A
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>B
+                    <input type="radio" age="level" autocomplete="off" checked>B
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>C
+                    <input type="radio" age="level" autocomplete="off" checked>C
                 </label>
             </div>
         </div>
@@ -79,13 +79,13 @@
         <div class="col-md-2 ">
             <div class="btn-group" data-toggle="buttons">
                 <label for="" class="btn bg-primary active">
-                    <input type="radio" name="level" autocomplete="off" checked>A
+                    <input type="radio" age="level" autocomplete="off" checked>A
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>B
+                    <input type="radio" age="level" autocomplete="off" checked>B
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>C
+                    <input type="radio" age="level" autocomplete="off" checked>C
                 </label>
             </div>
         </div>
@@ -98,13 +98,13 @@
         <div class="col-md-2 ">
             <div class="btn-group" data-toggle="buttons">
                 <label for="" class="btn bg-primary active">
-                    <input type="radio" name="level" autocomplete="off" checked>A
+                    <input type="radio" age="level" autocomplete="off" checked>A
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>B
+                    <input type="radio" age="level" autocomplete="off" checked>B
                 </label>
                 <label for="" class="btn bg-primary ">
-                    <input type="radio" name="level" autocomplete="off" checked>C
+                    <input type="radio" age="level" autocomplete="off" checked>C
                 </label>
             </div>
         </div>
