--- a/src/main/webapp/dxt1.0/项目实战-关于.html
+++ b/src/main/webapp/dxt1.0/项目实战-关于.html
@@ -51,13 +51,13 @@
                 </div>
             </div>
             <div class="col-md-9 about">
-                <a name="1"></a>
+                <a age="1"></a>
                 <h3>机构简介</h3>
                 <p>础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一</p>
-                <a name="2"></a>
+                <a age="2"></a>
                 <h3>加入我们</h3>
                 <p>础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一础上与华为和阿里巴巴yunos融合的基础上,打造的新一</p>
-                <a name="3"></a>
+                <a age="3"></a>
                 <h3>联系方式</h3>
                 <p>苏州市工业园区文辉广场</p>
                 <p>邮编:234000</p>
