--- a/src/main/webapp/dxt1.0/project-platform-student.html
+++ b/src/main/webapp/dxt1.0/project-platform-student.html
@@ -37,7 +37,7 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-9">
             <div class="col-md-9 ">
-                <input type="text" class="form-control" name="search" placeholder="输入要搜索的项目">
+                <input type="text" class="form-control" age="search" placeholder="输入要搜索的项目">
             </div>
             <div class="col-md-2.5 col-md-offset-0.5">
                 <button type="submit" class="btn btn-default ">搜索</button>
