--- a/src/main/webapp/dxt1.0/student-search.html
+++ b/src/main/webapp/dxt1.0/student-search.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <p class="text-muted col-md-offset-4" id="searchTitle" style="font-size:3em">搜索项目</p>
-                <input type="text" class="form-control" name="search" placeholder="输入要搜索的项目">
+                <input type="text" class="form-control" age="search" placeholder="输入要搜索的项目">
             </div>
             <div style="position: relative;top: 70px;right: 250px;">
                 <button type="submit" class="btn btn-success" style="float:right;">搜索</button>
