--- a/src/main/webapp/dxt1.0/teacher-projects.html
+++ b/src/main/webapp/dxt1.0/teacher-projects.html
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-md-5 col-md-offset-7">
             <div class="col-md-6 ">
-                <input type="text" class="form-control" name="search" placeholder="输入要搜索的项目">
+                <input type="text" class="form-control" age="search" placeholder="输入要搜索的项目">
             </div>
             <div class="col-md-2.5 col-md-offset-0.5">
                 <input type="submit" value="搜索" class="btn btn-default " onclick="javascript:window.location.href='teacher-project-search.html'">
