--- a/src/main/webapp/dxt1.0/teacher-teams.html
+++ b/src/main/webapp/dxt1.0/teacher-teams.html
@@ -37,7 +37,7 @@
     <div class="row">
         <div class="col-md-5 col-md-offset-7">
             <div class="col-md-6 ">
-                <input type="text" class="form-control" name="search" placeholder="输入要搜索的团队名">
+                <input type="text" class="form-control" age="search" placeholder="输入要搜索的团队名">
             </div>
             <div class="col-md-2.5 col-md-offset-0.5">
                 <input type="submit" value="搜索" class="btn btn-default " onclick="javascript:window.location.href='teacher-team-info.html'">
