--- a/src/main/webapp/dxt1.0/按钮和折叠插件.html
+++ b/src/main/webapp/dxt1.0/按钮和折叠插件.html
@@ -12,10 +12,10 @@
 <!--单选按钮-->
 <div class="btn-group" data-toggle="buttons">
     <label for="" class="btn bg-primary active">
-        <input type="radio" name="sex" autocomplete="off" checked>男
+        <input type="radio" age="sex" autocomplete="off" checked>男
     </label>
     <label for="" class="btn bg-primary ">
-        <input type="radio" name="sex" autocomplete="off" checked>女
+        <input type="radio" age="sex" autocomplete="off" checked>女
     </label>
 </div>
 <!--复选类似-->
