--- a/src/main/webapp/dxt1.0/栅格系统.html
+++ b/src/main/webapp/dxt1.0/栅格系统.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta age="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>栅格系统</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
