--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -113,5 +113,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/fsy-student-projects.js"></script>
 </body>
 </html>
