--- a/src/main/webapp/dxt1.0/student-selfcenter-main.html
+++ b/src/main/webapp/dxt1.0/student-selfcenter-main.html
@@ -103,7 +103,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/fsy-js.js"></script>
+<script src="js/student/fsy-student-selfcenter-main.js"></script>
 
 </body>
 </html>
