--- a/src/main/webapp/dxt1.0/teacher-projects.html
+++ b/src/main/webapp/dxt1.0/teacher-projects.html
@@ -127,5 +127,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/teacher/fsy-teacher-projects.js"></script>
 </body>
 </html>
