--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -34,68 +34,46 @@
 <br><br><br>
 
 
+
 <div class="container">
-    <div class="row">
-        <div class="col-md-5 info-left">
-            <h3>工程实践项目</h3>
-            <div class="list-group">
-                <a href="student-project-info.html" class="list-group-item ">
-                    <h4>Ecollaboration</h4>
-                    <p class="list-group-item-text">本项目旨在建设一个校园工程实践中心</p>
-                </a>
-                <a href="student-project-info.html" class="list-group-item ">
-                    <h4>图像识别技术</h4>
-                    <p class="list-group-item-text">该项目要求设计出一种更高效的图像识别算法</p>
-                </a>
-                <a href="student-project-info.html" class="list-group-item ">
-                    <h4>大数据挖掘</h4>
-                    <p class="list-group-item-text">通过学习数据挖掘了解</p>
-                </a>
-                <a href="student-project-info.html" class="list-group-item ">
-                    <h4>hhhface</h4>
-                    <p class="list-group-item-text">识别人脸app</p>
-                </a>
+    <h3>工程实践项目</h3>
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">Ecollaboration</a>
+                </h4>
             </div>
-            <ul class="pagination pagination-lg ">
-                <li><a href="#">&laquo;</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li ><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">&raquo;</a></li>
-            </ul>
-        </div>
-        <div class="col-md-5  col-md-offset-2">
-            <h3>兴趣项目</h3>
-            <div class="list-group">
-                <a href="#" class="list-group-item ">
-                    <h4>项目A</h4>
-                    <p class="list-group-item-text">项目简介</p>
-                </a>
-                <a href="#" class="list-group-item ">
-                    <h4>项目B</h4>
-                    <p class="list-group-item-text">这里是相关内容详情</p>
-                </a>
-                <a href="#" class="list-group-item ">
-                    <h4>项目C</h4>
-                    <p class="list-group-item-text">这里是相关内容详情</p>
-                </a>
-                <a href="#" class="list-group-item ">
-                    <h4>项目D</h4>
-                    <p class="list-group-item-text">这里是相关内容详情</p>
-                </a>
+            <div id="collapseOne" class="panel-collapse collapse ">
+                <div id='number' class="panel-body">
+                </div>
+                <div id='createDate' class="panel-body">
+                </div>
+                <div id='keyWord' class="panel-body">
+                </div>
+                <div id='info' class="panel-body">
+                </div>
+                <div id='status' class="panel-body">
+                </div>
+                <div id='teacherVOId' class="panel-body">
+                </div>
+                <div id='teamVOIdSet' class="panel-body">
+                </div>
             </div>
-            <ul class="pagination pagination-lg ">
-                <li><a href="#">&laquo;</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li ><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">&raquo;</a></li>
-            </ul>
         </div>
     </div>
-</div>
+
+
+            <h3>兴趣项目</h3>
+            <section id="domBox" class="list-group">
+            </section>
+          <ul class="pager">
+              <li><a href="javascript:;" id="pre">上一页</a></li>
+              <li id="list"></li>
+              <li><a href="javascript:;" id="next">下一页</a></li>
+          </ul>
+      </div>
+
 
 
 <br><br><br><br><br><br><br>
