老师项目成功显示

--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -68,9 +68,9 @@
             <section id="domBox" class="list-group">
             </section>
           <ul class="pager">
-              <li><a href="javascript:;" id="pre">上一页</a></li>
+              <li><a href="javascript:;" id="preDom">上一页</a></li>
               <li id="list"></li>
-              <li><a href="javascript:;" id="next">下一页</a></li>
+              <li><a href="javascript:;" id="nextDom">下一页</a></li>
           </ul>
       </div>
 
