--- a/src/main/webapp/dxt1.0/student-selfcenter-main.html
+++ b/src/main/webapp/dxt1.0/student-selfcenter-main.html
@@ -32,7 +32,7 @@
     </div>
 </nav>
 
-<form>
+<form id="selfInfoform">
     <div>
         <img src="img/timg.jpeg" class="img-rounded" id="picture">
     </div>
@@ -41,11 +41,11 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
                 <p class="text-muted">姓名</p>
-                <input type="text" class="form-control" placeholder="耿瑞">
+                <input name="" type="text" class="form-control" placeholder="耿瑞">
             </div>
             <div class="col-md-2 col-md-offset-0">
                 <p class="text-muted">性别</p>
-                <input type="text" class="form-control" placeholder="男">
+                <input name="" type="text" class="form-control" placeholder="男">
             </div>
         </div>
         <br>
@@ -53,42 +53,29 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
                 <p class="text-muted">邮箱</p>
-                <input type="text" class="form-control" placeholder="*********@mail.ustc.edu">
+                <input name="" type="text" class="form-control" placeholder="*********@mail.ustc.edu">
             </div>
             <div class="col-md-2 col-md-offset-0">
                 <p class="text-muted">联系方式</p>
-                <input type="text" class="form-control" placeholder=".13988881234">
+                <input  name="" type="text" class="form-control" placeholder=".13988881234">
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-6 col-md-offset-2">
                 <p class="text-muted">家庭住址</p>
-                <input type="text" class="form-control" placeholder="独墅湖高教区****">
+                <input name="" type="text" class="form-control" placeholder="独墅湖高教区****">
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-6 col-md-offset-2">
                 <p class="text-muted">毕业学校</p>
-                <input type="text" class="form-control" placeholder="****大学">
-            </div>
-        </div>
-        <br><hr/><br>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-2">
-                <p class="text-muted">是否有进行中的项目</p>
-                <p class="bg-muted text-center">有</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-2">
-                <p class="text-muted">是否需要新的项目</p>
-                <p class="text-center">无</p>
+                <input name="" type="text" class="form-control" placeholder="****大学">
             </div>
         </div>
         <button type="reset" class="btn btn-primary"  style="margin-left: 635px">重置</button>
-        <button type="submit" class="btn btn-success" >确定</button>
+        <button id="submitButton" type="submit" class="btn btn-success" >确定</button>
     </div>
 </form>
 
