--- a/src/main/webapp/dxt1.0/login.html
+++ b/src/main/webapp/dxt1.0/login.html
@@ -26,7 +26,7 @@
                         <input type="password" class="form-control" name="passWord" placeholder="请输入你的密码">
                     </div>
                     <div class="form-group">
-                        <input type="button" class="btn btn-default btn-sm" value="登录" onclick="submitform();">
+                        <input type="button" id="submitbutton" class="btn btn-default btn-sm" value="登录">
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <button type="reset"  class="btn btn-default btn-sm" >重置</button>
                     </div>
