--- a/src/main/webapp/dxt1.0/search.html
+++ b/src/main/webapp/dxt1.0/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>学生个人中心</title>
+    <title>搜索项目</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Ec-style.css">
@@ -32,24 +32,22 @@
         </div>
 </nav>
 <br><br><br><br><br><br><br><br><br><br><br><br>
-
-<form>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <p class="text-muted col-md-offset-4" id="searchTitle" style="font-size:3em">搜索项目</p>
-                <input type="text" class="form-control" age="search" placeholder="输入要搜索的项目">
-            </div>
-            <div style="position: relative;top: 70px;right: 250px;">
-                <button type="submit" class="btn btn-success" style="float:right;">搜索</button>
+<div id="formshowDiv">
+    <form id="searchorm">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <p class="text-muted col-md-offset-4" id="searchTitle" style="font-size:3em">搜索项目</p>
+                    <input id="searchInfo" type="text" name="keyWord" class="form-control" age="search" placeholder="输入要搜索的项目">
+                </div>
+                <div style="position: relative;top: 70px;right: 250px;">
+                    <button id="searchButton" type="submit" class="btn btn-success" style="float:right;">搜索</button>
+                </div>
             </div>
         </div>
-    </div>
 
-</form>
-
-
-
+    </form>
+</div>
 <br><br><br>
 <footer id="footer">
     <div class="container">
@@ -66,5 +64,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/fsy-js.js"></script>
+<script src="js/fsy-search.js"></script>
 </body>
 </html>
