老师项目成功显示

--- a/src/main/webapp/dxt1.0/login.html
+++ b/src/main/webapp/dxt1.0/login.html
@@ -41,6 +41,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/fsy-login.js"></script>
+<script src="js/common/fsy-login.js"></script>
 </body>
 </html>
