--- a/src/main/webapp/dxt1.0/search.html
+++ b/src/main/webapp/dxt1.0/search.html
@@ -64,6 +64,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/fsy-js.js"></script>
-<script src="js/fsy-search.js"></script>
+<script src="js/common/fsy-search.js"></script>
 </body>
 </html>
