--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>学生项目详情</title>
+    <title>学生身份查看项目详情</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Ec-style.css">
-    <link rel="stylesheet" href="css/shijianzhou.css">
-
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 </head>
 <body>
 
@@ -24,84 +23,107 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-top:0">
-                <li ><a href="student-projects.html"><span class="glyphicon glyphicon-home"></span> 我的项目</a></li>
+                <li class="active"><a href="student-projects.html"><span class="glyphicon glyphicon-home"></span> 我的项目</a></li>
                 <li ><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
+                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
             </ul>
         </div>
     </div>
 </nav>
-<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br>
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 ">
-            <div class="media">
-                <div class="media-body">
-                    <h4 class="media-heading">项目名称</h4>
-                    <input type="text" value="Ecolloboration">
+
+
+    <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <p class="text-muted">项目名称</p>
+                    <input type="text" class="form-control"  name="name">
+                </div>
+                <div class="col-md-5 ">
+                    <p class="text-muted">项目描述</p>
+                    <input type="text" class="form-control"  name="info">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <p class="text-muted">项目关键字</p>
+                    <input type="text" class="form-control"  name="keyWord">
+                </div>
+                <div class="col-md-5">
+
+                    <p class="text-muted" >申请截止日期</p>
+                    <input type="text" class="form-control"  name="applyBeforeDate">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <p class="text-muted">团队数上限</p>
+                    <input type="text" class="form-control" name="teamMax">
+                </div>
+                <div class="col-md-5">
+                    <p class="text-muted">当前团队数</p>
+                    <input type="text" class="form-control"  name="teamNumber">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <p class="text-muted">相关要求</p>
+                    <input type="text" class="form-control"  name="requirement">
+                </div>
+                <div class="col-md-5">
+                    <p class="text-muted">项目截止时间</p>
+                    <input type="text" class="form-control"  name="finishDate">
+                </div>
+            </div>
+
+
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a data-toggle="modal" data-target="#myModal" >
+        <input type="submit"  value="申请" class="btn btn-default">
+            </a>
+
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span>×</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">
+                            选择团队
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <p align="center">
+
+                            <input type="radio" name="team" value="male">团队一
+                            <input type="radio" name="team" value="female">团队二
+                            <input type="radio" name="team" value="female">团队三
+
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <p align="center">
+                            <button type="button" class="btn btn-default"
+                                    data-dismiss="modal">
+                                确定
+                            </button>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="media">
-                <div class="media-body">
-                    <h4 class="media-heading">项目成员</h4>
-                    <input type="text" value="张三、李四、赵五">
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="media">
-                <div class="media-body">
-                    <h4 class="media-heading">项目简介</h4>
-                    <input type="text"  value="本项目意在完成电商app">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
-<section id="cd-timeline" class="cd-container">
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
-        </div>
 
-        <div class="cd-timeline-content">
-            <h2>第一阶段</h2>
-        </div>
-    </div>
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-movie">
-            <img src="img/cd-icon-movie.svg" alt="Movie">
-        </div>
-
-        <div class="cd-timeline-content">
-            <h2>第二阶段</h2>
-        </div>
-    </div>
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
-        </div>
-
-        <div class="cd-timeline-content">
-            <h2 style="color: #761c19">第三阶段</h2>
-        </div>
-    </div>
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-movie">
-            <img src="img/cd-icon-movie.svg" alt="Movie">
-        </div>
-
-        <div class="cd-timeline-content">
-            <h2>第四阶段</h2>
-        </div>
-    </div>
-</section>
 
 <footer id="footer">
     <div class="container">
@@ -112,11 +134,9 @@
     </div>
 </footer>
 
-
-
-
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
